# fastapi-tasks-manager

./: .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Roadmap.txt  alembic.ini  pyproject.toml  readme.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20251129_add_tag_position_quadrant.py  README.md  dbb6eede6d13_add_subtasks_and_recurrence.py
app/: crud.py  database.py  main.py  models.py  readme.txt  requirements.txt  schemas.py
app/routers/: subtasks.py  tasks.py
app/static/: app.css
app/templates/: base.html  edit_task.html  list.html  matrix.html  stats.html
scripts/: check_columns.py  migrate_due_date.py
tests/: test_api_reorder.py  test_crud.py  test_main.py  test_recurrence.py  test_subtasks.py
