[tool.poetry]
name = "fastapi-tasks-manager"
version = "0.1.0"
description = "Small FastAPI app to manage tasks (Eisenhower matrix)."
authors = ["Joeside <noreply@example.com>"]

[tool.ruff]
line-length = 88
extend-ignore = ["E203"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
